--- a/html/index.html
+++ b/html/index.html
@@ -14,12 +14,17 @@
 <body>
     <!-- Este archivo engloba todo lo de bootstrap -->
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <div class="container">
-        <div class="row justify-content-center my-4">
+    <div class="container-sm">
+        <div class="row text-center my-5">
             <div class="col"><input type="text" id='num1' placeholder="Inserta Número 1"></div>
             <div class="col"><input type="text" id='num2' placeholder="Inserta Número 2"></div>
         </div>
-        <div class="row justify-content-center my-4">
+        <div class="row my-5 text-center">
+            <div class="col">
+                <input class='col' placeholder="Resultado" id='result' type="number">
+            </div>
+        </div>
+        <div class="row text-center my-5">
             <div class="col">
                 <p><a id='sum' class="btn btn-primary" onclick=""><i class="fa-solid fa-plus"></i></a></p>
             </div>
@@ -34,11 +39,7 @@
             </div>
         </div>
 
-        <div class="row my-1 text-center">
-            <div class="col">
-                <input class='col' placeholder="Resultado" id='result' type="number">
-            </div>
-        </div>
+        
     </div>
     <script src="/scripts.js"></script>
 
