ci: corrected margin

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="/js/bootstrap.bundle.min.js"></script>
     <div class="container-sm">
         <div class="row text-center my-5">
-            <div class="col"><input type="text" id='num1' placeholder="Inserta Número 1"></div>
-            <div class="col"><input type="text" id='num2' placeholder="Inserta Número 2"></div>
+            <div class="col my-2"><input type="text" id='num1' placeholder="Inserta Número 1"></div>
+            <div class="col my-2"><input type="text" id='num2' placeholder="Inserta Número 2"></div>
         </div>
         <div class="row my-5 text-center">
             <div class="col">
